--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,10 +25,11 @@
     <dependencies>
 
 <!--  服务注册-->
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>com.atguigu</groupId>
