--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -19,4 +19,5 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
 
-#spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
