--- a/service/pom.xml
+++ b/service/pom.xml
@@ -17,6 +17,8 @@
         <module>service_oss</module>
         <module>service-cms</module>
         <module>service-acl</module>
+        <module>service-msm</module>
+        <module>service-ucenter</module>
     </modules>
 
     <properties>
