--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -23,5 +23,5 @@ mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
 #spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 
 
-feign.hystrix.enabled=true
-shystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+#feign.hystrix.enabled=true
+#shystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
