--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
     <modules>
         <module>service</module>
         <module>common</module>
+        <module>canal_client</module>
+        <module>api_gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.12.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.atguigu</groupId>
@@ -43,7 +45,7 @@
         <commons-dbutils.version>1.7</commons-dbutils.version>
         <canal.client.version>1.1.0</canal.client.version>
         <docker.image.prefix>zx</docker.image.prefix>
-        <cloud-alibaba.version>0.2.2.RELEASE</cloud-alibaba.version>
+        <cloud-alibaba.version>0.2.2</cloud-alibaba.version>
     </properties>
 
 
@@ -67,11 +69,18 @@
             </dependency>
 
             <!-- 服务注册-->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
-                <version>${cloud-alibaba.version}}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.alibaba.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>-->
+<!--                <version>${cloud-alibaba.version}}</version>-->
+<!--            </dependency>-->
+
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+<!--                <version>${spring-cloud-alibaba-nacos.version}</version>-->
+<!--            </dependency>-->
+
 
             <!--mybatis-plus 持久层-->
             <dependency>
