--- a/service/service-ucenter/src/main/resources/application.properties
+++ b/service/service-ucenter/src/main/resources/application.properties
@@ -12,12 +12,15 @@ spring.datasource.password=152061
 #spring.redis.port=6379
 #spring.redis.database= 0
 #spring.redis.timeout=1800000
+
 spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
 
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
 
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 
 # appid
 wx.open.app_id=wxed9954c01bb89b47
