--- a/service/service_order/src/main/resources/application.properties
+++ b/service/service_order/src/main/resources/application.properties
@@ -1,27 +1,28 @@
+# ????
+server.port=8007
+# ???
+spring.application.name=service-order
 
-server.port=8001
-
-spring.application.name=service-edu
-
-spring.profiles.active=dev
-
+# mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=152061
 
-
+#??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
+#??mapper xml?????
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduorder/mapper/xml/*.xml
 
+#mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+# nacos????
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-spring.cloud.nacos.discovery.server-addr=localhost:8848
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-
-
+#??????
 #feign.hystrix.enabled=true
-#shystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+# ??hystrix???????1000ms
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
